# PinPointer

./: .gitignore  Cargo.toml  README.md  geometry_check.xml  ifa_sim.xml  pyproject.toml  sirius.json  sopdet.json
kicad/: electron_router.kicad_prl  electron_router.kicad_pro  electron_router.kicad_sch  fp-info-cache  fp-lib-table  sirius.kicad_pcb  sirius.kicad_pro  sirius.kicad_sch
kicad/3dmodels/: 1277AS-H-1R0MP2.step  599-0030-137F.stp  CSS-0575A-SMT-TR.stp  ETQP4M6R8KVK.step  LC29H.step  SI2347DS-T1-GE3.STEP  yellow_led.stp
kicad/footprints/sirius.pretty/: 1277AS-H-1R0M=P2.kicad_mod  BMP581.kicad_mod  CSS0575ASMTTR.kicad_mod  CUI_TB002-500-02BE.kicad_mod  FIRM v1.0.kicad_mod  IC_ICM-45686.kicad_mod  IFA_915.kicad_mod  IND_ETQP4M6R8KVK.kicad_mod  LC29H.kicad_mod  Pi_hat_generic.kicad_mod  RFM95W-915S2.kicad_mod  SOD-323HEUS2H_TOS.kicad_mod  SOT95P280X100-6N.kicad_mod  SOT_7DS-T1-GE3_VIS.kicad_mod  TE_CONMHF1-SMD-T.kicad_mod  XT60.kicad_mod  ipex_mhf1.kicad_mod  pi_zero_2w.kicad_mod  sirius_logo.kicad_mod  sopdet_logo.kicad_mod
kicad/lc29h/: LC29H.bak
kicad/scripting/: via_positions.py
kicad/sirius/: fabrication-toolkit-options.json  fp-lib-table  sirius.kicad_dru  sirius.kicad_pcb  sirius.kicad_pro  sirius.kicad_sch  sym-lib-table
kicad/sirius/.kinotes/: KiNotes_kicad.md  KiNotes_sirius.md  sirius_worklog_20260401.md
kicad/sopdet/: fp-lib-table  sopdet.kicad_dru  sopdet.kicad_pcb  sopdet.kicad_pro  sopdet.kicad_sch  sym-lib-table
kicad/symbols/: sirius.kicad_sym
kicad/symbols/connectors/: xt60.kicad_sym
kicad/symbols/modules/: BMP581.kicad_sym  CMI-9605-0580T.kicad_sym  ICM-45686.kicad_sym  RFM95W-915S2.kicad_sym
openrocket/: fins_print.odt  pinpointer.ork
src/app/: settings.gradle.kts
src/app/app/: build.gradle.kts
src/app/gradle/: libs.versions.toml
src/app/gradle/wrapper/: gradle-wrapper.properties
src/python/scripts/: bent_antenna_sim.py  combine_csv.py  firm_reboot.py  firm_test.py  low_level_spi.py  matlab_ifa.py  pull_cs_high.py  rfm_95_receive.py  rfm_95_transmit.py  simple_patch_antenna.py  sirius_ifa.py  sirius_ifa_claude.py  sirius_ifa_manual.py  stream_nmea_data.py  yagi_uda_915.py
src/python/scripts/simulation_folder/: 3D_Pattern.vtk  et  ht  nf2ff.h5  nf2ff_E_0.h5  nf2ff_E_1.h5  nf2ff_E_2.h5  nf2ff_E_3.h5  nf2ff_E_4.h5  nf2ff_E_5.h5  nf2ff_H_0.h5  nf2ff_H_1.h5  nf2ff_H_2.h5  nf2ff_H_3.h5  nf2ff_H_4.h5  nf2ff_H_5.h5  port_it_1  port_ut_1
src/rust/ground_station/: Cargo.toml
src/rust/pinpointer/: Cargo.toml
src/rust/protocol/: Cargo.toml
src/rust/rfm95/: Cargo.toml
src/rust/rfm95/src/: lib.rs  (+4 more)
src/rust/rtk/: Cargo.toml  RTCM_API.md  RTCM_PARSER_SUMMARY.md
src/rust/rtkbase/: Cargo.toml  RTCM_PARSER.md
src/rust/sirius/: Cargo.toml
src/rust/sirius/src/: buzzer.rs  data_processor.rs  fire_pyro.rs  gps.rs  logger.rs  main.rs  radio.rs  serial.rs  state_machine.rs
src/rust/sopdet/: Cargo.toml
src/rust/sopdet/src/: gps.rs  logger.rs  main.rs  radio.rs  server.rs  state.rs
wheels/: csxcad-0.6.3.post1.dev93+g28ac61481-cp314-cp314-linux_x86_64.whl  openems-0.0.36.post1.dev133+gb0b835155-cp314-cp314-linux_x86_64.whl
(+52 files in other folders)
