[package]
name = "sopdet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sopdet"
path = "src/main.rs"

[dependencies]
# Shared telemetry protocol
protocol = { path = "../protocol" }

# LoRa radio driver
rfm95 = { path = "../rfm95" }

# GPS / RTK module (Quectel LC29H)
rtk = { path = "../rtk" }

# GPIO (same version used by rfm95)
gpio-cdev = "0.6"

# Error handling
anyhow = "1"

# Logging
log        = "0.4"
env_logger = "0.11"

# Serialisation (JSON for HTTP API, CSV for logs)
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
csv        = "1"

# Lightweight synchronous HTTP server
tiny_http = "0.12"

# Timestamps
chrono = "0.4"
